--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ highlighter: pygments
 title : Spatial Data Carpentry
 tagline: What's special about spatial?
 author :
-  name : Nathan Casler
+  name : Nathan Casler & Daniel Guaderrama
   email : ncasler@email.arizona.edu
   github : spatialcarpentry
-  twitter : username
-  feedburner : feedname
+  #twitter : username
+  #feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -27,9 +27,12 @@ author :
 #
 production_url : http://spatialcarpentry.github.io
 
+# for header-home link
+site_root : /
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
-baseurl: http://spatialcarpentry.github.io/
+#baseurl: http://spatialcarpentry.github.io/
 
 JB :
   version : 0.3.0
