--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ production_url : http://spatialcarpentry.github.io
 # for header-home link
 site_root : /
 
+baseurl : http://spatialcarpentry.github.io/
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 #baseurl: http://spatialcarpentry.github.io/
