--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : basics
+  BASE_PATH : http://spatialcarpentry.github.io/basics
 
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
